--- a/templates/events/category_form_template_0.html
+++ b/templates/events/category_form_template_0.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
 
 {% block head%}
-<h1>neue Kategorie hinzufügen</h1>
+<h1 class="display-6 fw-bold lh-1">neue Kategorie hinzufügen</h1>
 {% endblock %}
 
 {% block content %}
-    <a href="">zurück zur Übersicht</a><br>
+
+    <a href="{% url 'events:categories' %}">zurück zur Übersicht</a><br>
 
     <form method="POST">
     {% csrf_token %}
