--- a/templates/events/event_detail_1.html
+++ b/templates/events/event_detail_1.html
@@ -1,30 +1,51 @@
 {% extends 'base.html' %}
 
-{% block title %}
-Event: {{object.name}}
-{%endblock%}
-
 {% block head %}
-{{object.name}}
-{%endblock%}
 
-{% block content %}
-<h1>{{object.name}}</h1>
-<p>{{object.sub_title}}</p>
-<p>Category: {{object.category}}</p>
+<h1 class="display-6 fw-bold lh-1">{{object.name}}</h1>
+<h3 class="display-6 lh-3">{{object.sub_title}}</h3>
 
-<h3>Beschreibung</h3>
-<p>{{object.description}}</p>
-<p>findet statt am: {{object.date}}</p>
-<p>created at: {{object.created_at}}</p>
+<p>
+am <b>{{object.date}} Uhr</b>, eingestellt von  {{object.author}}
+in <a href="{% url 'events:category_detail' object.category.pk %}">
+{{object.category}}</a>
+</p>
 
-{% if object.related_events %}
-<h4>Ähnliche Events</h4>
-<ul>
-  {% for related in object.related_events %}
-    <li>{{related.name}}</li>
-  {% endfor %}
-</ul>
+{% if user.is_authenticated and user == object.author or True %}
+<span style="font-size:12px;">
+<a href="{% url 'events:event_update' object.id %}">editieren</a> |
+<a href="{% url 'events:event_delete' object.id %}">löschen</a>
+</span>
 {% endif %}
 
+{% endblock %}
+
+{% block content %}
+<div class="container">
+<div class="col-lg-8 col-sm-12">
+
+    <h3>Beschreibung</h3>
+    <p>{{object.description}}</p>
+
+    <h3>zusätzliche Infos</h3>
+    <ul>
+      <li>eingestellt am: {{object.created_at}}</li>
+      <li>eingestellt von: {{object.author}}</li>
+      <li><b>findet statt am (deutsche Zeit): {{object.date}}</b></li>
+      <li>Min Gruppengröße: {{object.get_min_group_display}}</li>
+    </ul>
+
+    {% if object.related_events.exists %}
+    <h3>Ähnliche Events</h3>
+    <ul>
+      {% for related in object.related_events %}
+        <li><a href="{{related.get_absolute_url}}">{{related.name}}</a></li>
+      {% endfor %}
+    </ul>
+    {% endif %}
+
+</div>
+</div>
+
 {%endblock%}
+
