--- a/templates/events/event_list_3.html
+++ b/templates/events/event_list_3.html
@@ -1,29 +1,32 @@
 {% extends 'base.html' %}
 
 {% block title %}
-Übersicht der Events
-{%endblock%}
+Event Übersicht
+{% endblock %}
 
-{% block head %}
-Übersicht der Events
-{%endblock%}
+{% block head%}
+<h1 class="display-6 fw-bold lh-1">Event Übersicht</h1>
+<p>Tolle Events und Aktivitäten!</p>
+{% endblock %}
 
 {% block content %}
 
 <ul class="list-group event_box">
 {% for event in object_list %}
-  <a href="{% url 'events:event_detail' event.slug%}">
+    <a href="{% url 'events:event_detail' event.pk %}">
+
     <li class="list-group-item rounded">
-      <b>{{event.name}}</b>
-      <span class="badge rounded-pill bg-primary">
-        {{event.category.name}}
-      </span>
+    <small><span>am {{event.date}}</span></small><br>
+    <b>{{event.name}}</b>
+        <span class="badge rounded-pill bg-primary">{{event.category.name}}</span>
         <p>by {{event.author}}</p>
     </li>
-  </a>
+    </a>
 {% endfor%}
 </ul>
 
 {% include "../snippets/paginator.html" %}
 
 {%endblock%}
+
+
