--- a/templates/events/event_detail_1.html
+++ b/templates/events/event_detail_1.html
@@ -1,8 +1,13 @@
 {% extends 'base.html' %}
 
+{% block title %}
+{{object}}
+{%endblock%}
+
+
 {% block head %}
 
-<h1 class="display-6 fw-bold lh-1">{{object.name}}</h1>
+<h1 class="display-6 fw-bold lh-1">{{object}}</h1>
 <h3 class="display-6 lh-3">{{object.sub_title}}</h3>
 
 <p>
