--- a/templates/events/base_html_2.html
+++ b/templates/events/base_html_2.html
@@ -35,7 +35,7 @@
                   text-white">Kategorien</a></li>
         </ul>
 
-        <form action="{% url 'events:categories' %}" method="get" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+        <form action="" method="get" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
           <input name="q" required="required" type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
         </form>
 
@@ -130,21 +130,4 @@
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
