--- a/templates/events/categories_2.html
+++ b/templates/events/categories_2.html
@@ -13,12 +13,12 @@
 <div class="col-lg-8 col-sm-12">
 
 <ul class="list-group event_box">
-{% for cat in categories %}
+{% for category in categories %}
 
-<a href="{% url 'events:category_detail' cat.pk %}">
+<a href="{% url 'events:category_detail' category.pk %}">
 <li class="list-group-item rounded">
-    {{cat.name}}
-    <span class="badge rounded-pill bg-primary">{{cat.num_of_events}}</span>
+    {{category}}
+    <span class="badge rounded-pill bg-primary">{{category.num_of_events}}</span>
 </li>
 </a>
 {% endfor %}
