--- a/templates/events/category_form_template_0.html
+++ b/templates/events/category_form_template_0.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %}
 
+{% block title %}
+neue Kategorie hinzufügen
+{% endblock %}
+
+
 {% block head%}
 <h1 class="display-6 fw-bold lh-1">neue Kategorie hinzufügen</h1>
 {% endblock %}
