added some stuff

--- a/templates/events/category_update_0.html
+++ b/templates/events/category_update_0.html
@@ -1,4 +1,9 @@
-% extends 'base.html' %}
+{% extends 'base.html' %}
+
+{% block title %}
+Kategorie bearbeiten
+{% endblock %}
+
 
 {% block head%}
 <h1 class="display-6 fw-bold lh-1">Kategorie bearbeiten</h1>
