--- a/templates/events/category_detail_3.html
+++ b/templates/events/category_detail_3.html
@@ -26,11 +26,10 @@
 
     <p>{{category.description}}</p>
     <p>
-    <a href="{% url 'events:event_create' category.pk %}">
+    <a href="{% url 'events:category_create' %}">
     <button class="btn btn-primary">neues Event in {{category}} eintragen</button>
     </a>
     </p>
 </div>
 </div>
 {% endblock %}
-
