--- a/templates/events/event_form_template_3.html
+++ b/templates/events/event_form_template_3.html
@@ -11,9 +11,9 @@
 
 {% block head %}
 {% if object %}
-    Event {{object.name}} updaten
+    <h1 class="display-6 fw-bold lh-1">Event {{object.name}} updaten</h1>
 {% else %}
-    Event eintragen
+    <h1 class="display-6 fw-bold lh-1">Event eintragen</h1>
 {% endif %}
 {%endblock%}
 
