--- a/templates/events/event_form_template_1.html
+++ b/templates/events/event_form_template_1.html
@@ -5,7 +5,7 @@
 {%endblock%}
 
 {% block head %}
-  Event eintragen
+<h1 class="display-6 fw-bold lh-1">Event eintragen</h1>
 {%endblock%}
 
 {% block content %}
