--- a/templates/events/event_form_template_1.html
+++ b/templates/events/event_form_template_1.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
 {% block title %}
   Event eintragen
@@ -9,6 +10,10 @@
 {%endblock%}
 
 {% block content %}
+<div class="container">
+<div class="row">
+<div class="col-lg-8 col-md-12 mb-5">
+
 <a href="{% url 'events:events' %}">zurück zur Übersicht</a><br>
 
 <form method="POST">
@@ -19,4 +24,7 @@
         </div>
 </form>
 
+<div>
+</div>
+</div>
 {% endblock %}
