--- a/templates/events/event_form_template_3.html
+++ b/templates/events/event_form_template_3.html
@@ -3,7 +3,7 @@
 
 {% block title %}
 {% if object %}
-    Event {{object.name}} updaten
+    Edit {{object.name}}
 {% else %}
     Event eintragen
 {% endif %}
@@ -11,14 +11,20 @@
 
 {% block head %}
 {% if object %}
-    <h1 class="display-6 fw-bold lh-1">Event {{object.name}} updaten</h1>
+    <h1 class="display-6 fw-bold lh-1">Event {{object.name}}</h1>
 {% else %}
     <h1 class="display-6 fw-bold lh-1">Event eintragen</h1>
 {% endif %}
 {%endblock%}
 
 {% block content %}
+<div class="container">
+<div class="row">
+<div class="col-lg-8 col-md-12 mb-5">
+
+<p>
 <a href="{% url 'events:events' %}">zurück zur Übersicht</a><br>
+</p>
 
 <form method="POST">
     {% csrf_token %}
@@ -32,4 +38,7 @@
         </div>
 </form>
 
+<div>
+</div>
+</div>
 {% endblock %}
