--- a/templates/events/category_detail_4.html
+++ b/templates/events/category_detail_4.html
@@ -35,7 +35,7 @@
 
     <h3>Events aus der Kategorie {{category}}</h3>
     <ul>
-    {% for e in category.show %}
+    {% for e in category.events.all %}
         <li><a href="{{e.get_absolute_url}}">{{e.name}}</a></li>
     {% empty %}
         <li>In dieser Kategorie sind keine Events vorhanden.</li>
