--- a/templates/events/base_html_2.html
+++ b/templates/events/base_html_2.html
@@ -121,7 +121,8 @@
       <a href="#">Back to top</a>
     </p>
     <h3 class="mb-1">Event Manager</h3>
-    <p class="mb-0">Neu in Django? <a href="/">Visit the Pingu homepage</a> oder <a href="https://djangoheros.spielprinzip.com">Leg los mit Django</a>.</p>
+    <p class="mb-0">Neu in Django? <a href="/">Visit the Pingu homepage</a>
+    oder <a href="https://djangoheroes.spielprinzip.com">Leg los mit Django</a>.</p>
   </div>
 </footer>
 
